c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/bitwise_shiftr_assign.c
int main(void) {
    int var_to_shift = 1234;
    int x = 0;
    x = var_to_shift >> 4;
    return x;
}