c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/return_in_assignment.c
int main(void)
{
    int 10 = return 0;
}